--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: scala
 
 script:
-  - sbt test scripted
+  - sbt "++${TRAVIS_SCALA_VERSION}" "^^${SBT_VERSION}" test scripted
 
-jdk:
-  - oraclejdk8
+matrix:
+  include:
+  - env: SBT_VERSION="0.13.16"
+    jdk: openjdk7
+    scala: 2.10.6
+  - env: SBT_VERSION="1.0.0-RC3"
+    jdk: oraclejdk8
+    scala: 2.12.2
 
 sudo: false
