--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
   include:
   - env: SBT_VERSION="0.13.16"
     scala: 2.10.6
-  - env: SBT_VERSION="1.0.0-RC3"
-    scala: 2.12.2
+  - env: SBT_VERSION="1.0.0"
+    scala: 2.12.3
 
 sudo: false
