--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -5,3 +5,14 @@ updates.fileExtensions = [
   ".sbt"
   ".md"
 ]
+
+# https://github.com/scala-steward-org/scala-steward/pull/2714
+pullRequests.grouping = [
+  {
+    name = "scalatest"
+    filter = [
+      {"group" = "org.scalatest"}
+      {"group" = "org.scalatestplus"}
+    ]
+  }
+]
