--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,10 @@ jobs:
           - java: 11
     steps:
     - uses: actions/checkout@v3
-    - uses: olafurpg/setup-scala@v13
+    - uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b # v3.9.0
       with:
-        java-version: "adopt@1.${{ matrix.java }}"
+        java-version: ${{matrix.java}}
+        distribution: temurin
     - uses: coursier/cache-action@v6
     - run: sbt -v test scripted
     - run: git diff --exit-code # check scalariform
