--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,12 @@ jobs:
           - java: 8
           - java: 11
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3.2.0
     - uses: actions/setup-java@1df8dbefe2a8cbc99770194893dd902763bee34b # v3.9.0
       with:
         java-version: ${{matrix.java}}
         distribution: temurin
-    - uses: coursier/cache-action@v6
+    - uses: coursier/cache-action@045c1dab7ed65bc3fdec6b16c413c8d0001f9217 # v6.4.2
     - run: sbt -v test scripted
     - run: git diff --exit-code # check scalariform
     - run: rm -rf "$HOME/.ivy2/local"
