--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,5 @@ jobs:
         distribution: temurin
     - uses: coursier/cache-action@142d2738bd29f0eb9d44610828acb3a19809feab # v6.4.6
     - uses: sbt/setup-sbt@v1
-    - run: sbt -v test scripted
+    - run: sbt -v scalafmtSbtCheck "+ scalafmtCheckAll" test scripted
     - run: rm -rf "$HOME/.ivy2/local"
