--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,3 +3,6 @@ maxColumn = 120
 runner.dialect = Scala212Source3
 docstrings.style = keep
 align.tokens = []
+project.excludeFilters = [
+  "src/test/resources"
+]
